audio track dance

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <p>If everything is set up properly, you should hear some music!</p>
     <img id="current-track"/>
     <h3 id="current-track-name"></h3>
+    <p id="audio-features"></p>
     <!-- <a class="btn btn-salmon btn-lg" href="https://glitch.com/edit/#!/spotify-web-playback">Get started!</a> -->
     <a class="btn btn-salmon btn-lg" href="#">Happy</a>
     <a class="btn btn-salmon btn-lg" href="#">Sad</a>
