--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>If everything is set up properly, you should hear some music!</p>
     <img id="current-track"/>
     <h3 id="current-track-name"></h3>
-    <!-- <h3 id="audio-features"></h3> -->
+    <h3 id="audio-features"></h3>
     <!-- <a class="btn btn-salmon btn-lg" href="https://glitch.com/edit/#!/spotify-web-playback">Get started!</a> -->
     <a class="btn btn-salmon btn-lg" href="#">Happy</a>
     <a class="btn btn-salmon btn-lg" href="#">Sad</a>
