--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   </head>
   
   <body class="container">
-    <h1 class="text-salmon">Mood Music Player</h1>
-    <h4>This app uses the implicit grant authorization flow to get an access token and initialise the Web Playback SDK. It then uses the Spotify Connect Web API to play a song.</h4>
+    <h1 class="text-salmon">Scented Speaker</h1>
+    <!-- <h4>This app uses the implicit grant authorization flow to get an access token and initialise the Web Playback SDK. It then uses the Spotify Connect Web API to play a song.</h4> -->
     <p>If everything is set up properly, you should hear some music!</p>
     <img id="current-track"/>
     <h3 id="current-track-name"></h3>
     <h3 id="audio-features"></h3>
     <!-- <a class="btn btn-salmon btn-lg" href="https://glitch.com/edit/#!/spotify-web-playback">Get started!</a> -->
-    <a class="btn btn-salmon btn-lg" href="#">Happy</a>
+    <!-- <a class="btn btn-salmon btn-lg" href="#">Happy</a>
     <a class="btn btn-salmon btn-lg" href="#">Sad</a>
     <a class="btn btn-salmon btn-lg" href="#">Angry</a>
-    <a class="btn btn-salmon btn-lg" href="#">Scared</a>
+    <a class="btn btn-salmon btn-lg" href="#">Scared</a> -->
   </body>
   
 </html>
